Upgrade Java to 25